Reformat with joined wrapped lines